[gd_scene load_steps=4 format=2]

[ext_resource path="res://Button Theme.tres" type="Theme" id=1]
[ext_resource path="res://Input Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/BaseConverter.gd" type="Script" id=3]

[node name="BaseConverter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 1024.0
margin_bottom = 203.0
theme = ExtResource( 1 )
text = "Base Converter"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 1024.0
margin_bottom = 256.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_top = 5.0
margin_right = 377.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Binary:      "

[node name="BinaryInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 381.0
margin_right = 881.0
margin_bottom = 49.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 2 )
placeholder_text = "Enter Binary Here"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 1024.0
margin_bottom = 309.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 143.0
margin_top = 5.0
margin_right = 377.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Base Ten:    "

[node name="BaseTenInput" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 381.0
margin_right = 881.0
margin_bottom = 49.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 2 )
placeholder_text = "Enter Base Ten Here"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 313.0
margin_right = 1024.0
margin_bottom = 362.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 143.0
margin_top = 5.0
margin_right = 377.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "Hexadecimal: "

[node name="HexInput" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
margin_left = 381.0
margin_right = 881.0
margin_bottom = 49.0
rect_min_size = Vector2( 500, 0 )
theme = ExtResource( 2 )
placeholder_text = "Enter Hexadecimal Here"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 1024.0
margin_bottom = 447.0
theme = ExtResource( 2 )
text = "
Press Esc for Menu"
align = 1

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/BinaryInput" to="." method="_on_BinaryInput_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/BaseTenInput" to="." method="_on_BaseTenInput_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer3/HexInput" to="." method="_on_HexInput_text_changed"]
